Fix glyph scrollbar

--- a/sass/components/canvas/canvas.scss
+++ b/sass/components/canvas/canvas.scss
@@ -108,7 +108,7 @@
   margin-top: 5px;
   display: flex;
   flex-direction: row;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
 
   &-left {
